feat: :sparkles: 主题、快捷键

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,13 @@
   box-shadow: none !important;
 }
 
+.el-input__wrapper {
+  background-color: transparent !important;
+}
+
+.el-input__inner {
+  height: 36px !important;
+}
 
 // 修改el-tooltip hover:: el-popper的样式 
 .el-popper {
