--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,6 +3,7 @@
   --categories-panel-bg: #fff;
   --categories-content-bg: #f5f7fa;
   --categories-bg-active: #e6f0ff;
+  --categories-bg-tab-active: #409eff1a;
   --categories-panel-bg-hover: #f5f7fa;
   --categories-text-color: #333;
   --categories-info-text-color: #666;
@@ -23,6 +24,7 @@
   --categories-panel-bg: #1a1a1a;
   --categories-content-bg: #2c2c2c;
   --categories-bg-active: #363636;
+  --categories-bg-tab-active: #409eff1a;
   --categories-panel-bg-hover: #363636;
   --categories-text-color: #fff;
   --categories-info-text-color: #a0a0a0;
