--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,10 @@
     --categories-text-color-active: #303133;
     --categories-info-text-color: #909399;
     --categories-border-color: #dcdfe6;
+    --search-bg-color: #faf8f8;
+    --search-text-color: #1e1e1e;
+    --search-info-text-color: #8a8a89;
+    --search-border-color: #e1e0e0;
   }
 
   .light {
@@ -25,6 +29,10 @@
     --categories-text-color-active: #303133;
     --categories-info-text-color: #909399;
     --categories-border-color: #dcdfe6;
+    --search-bg-color: #faf8f8;
+    --search-text-color: #1e1e1e;
+    --search-info-text-color: #8a8a89;
+    --search-border-color: #e1e0e0;
   }
 
   .dark {
@@ -36,6 +44,10 @@
     --categories-text-color-active: #409eff;
     --categories-info-text-color: #a3a6ad;
     --categories-border-color: #43444e;
+    --search-bg-color: #202020;
+    --search-text-color: #fcfcfc;
+    --search-info-text-color: #949494;
+    --search-border-color: #363636;
   }
 }
 
