feat: :sparkles: 书签检索对ChromeCore浏览器的支持、优化样式
1、新增书签搜索对ChromeCore浏览器的支持。

2、重构搜索引擎UI页面，添加重置默认数据。

3、修复自定义浏览器搜索引擎保存不成功问题。
4、修复检索图标icon显示问题。
5、调整搜索窗口搜索引擎查询方式。

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,6 +51,17 @@
 //   }
 // }
 
+// 自定义message
+.el-message {
+  --el-message-padding: 10px 15px !important;
+
+  border-radius: 6px !important;
+
+  .el-message__content {
+    @apply text-xs !text-panel;
+  }
+}
+
 .el-input__wrapper.is-focus,
 .el-input__wrapper:hover,
 .el-input__wrapper {
@@ -195,4 +206,13 @@
 
 .category-management {
   @apply border rounded-md dark:border-panel !w-[300px];
+}
+
+// 分类修改
+.el-message-box__container {
+  @apply w-full !inline-block px-4;
+}
+
+.message-footer {
+  @apply flex justify-end gap-2 mt-2;
 }
