feat: :sparkles: 重置缓存按类型选择

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -16,6 +16,7 @@
   --categories-text-color-active: #fff;
   --categories-border-color: #e4e7ed;
   --categories-border-color-rgb: 228, 231, 237;
+  --el-color-primary: #5d6dfd;
 
   // 搜索窗口主题变量
   --search-bg-color: #faf8f8;
