feat: :sparkles: 新增文本翻译功能以及划词翻译功能

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -72,6 +72,10 @@
   background-color: transparent !important;
 }
 
+.el-textarea__inner {
+  box-shadow: none !important;
+}
+
 // .el-input-group__append {
 //   position: relative;
 //   right: 10px;
