feat: :sparkles: 配置窗口新增本地应用 / 浏览器书签选项卡便于管理
1、新增应用书签选项卡管理操作
2、优化划词翻译失效问题
3、优化列表加载卡顿实现虚拟滚动加载，避免列表数据庞大
4、优化全局滚动条样式
5、托盘添加快速截图功能

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,6 +76,10 @@
   box-shadow: none !important;
 }
 
+.el-button:hover {
+  background-color: var(--el-color-primary) !important;
+}
+
 // .el-input-group__append {
 //   position: relative;
 //   right: 10px;
