--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -19,7 +19,7 @@
   --el-color-primary: #5d6dfd !important;
   --el-color-primary-light-3: #7b88fd;
   --el-color-primary-dark-2: #4a5cfd;
-  --el-button-hover-bg-color: #7b88fd;
+  --el-button-hover-bg-color: #4a5bef;
   --el-button-hover-border-color: #5d6dfd;
   // 搜索窗口主题变量
   --search-bg-color: #faf8f8;
