fix: :bug: 局部样式优化

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -80,6 +80,9 @@ div:focus {
 .category-list,
 .content-list,
 .search-list,
+.tiptap-editor,
+.result-container,
+.tags-container,
 .dark-mode-container,
 .translate-container,
 .result-container.result {
