--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -85,6 +85,7 @@ div:focus {
 .tags-container,
 .dark-mode-container,
 .translate-container,
+.user-center-container,
 .result-container.result {
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
