--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -86,6 +86,7 @@ div:focus {
 .dark-mode-container,
 .translate-container,
 .user-center-container,
+.backlink-items,
 .result-container.result {
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
